# StringWiggler

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STYLE.md  TODO.md  logger.cpp  logger.h  main.cpp  main_linux.cpp  main_linux_wayland.cpp  main_macos.mm  main_win32.cpp  renderer.cpp  renderer.h  tsan_suppressions.txt
.claude/: CLAUDE.md
.claude/commands/: audit-code.md  check-spelling.md  check-style.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/actions/setup-vulkan-linux/: action.yml
.github/actions/setup-vulkan-macos/: action.yml
.github/actions/setup-vulkan-windows/: action.yml
.github/scripts/: cleanup-caches.js
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos-clang.yml  build-windows-clang-cl.yml  build-windows-mingw.yml  build-windows-msvc.yml  ci_main.yml  ci_pr.yml  cleanup_caches.yml  pr-validation.yml  release.yml
docs/: ARCHITECTURE.md  DEV_ENV_SETUP.md
libs/: CMakeLists.txt
libs/logging/include/log/: logger.hpp
libs/logging/src/: logger.cpp
libs/logging/tests/: logger_tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: vector.hpp
libs/math/tests/: CMakeLists.txt  math_tests.cpp
libs/signals/include/signal/: signal.hpp
libs/signals/tests/: CMakeLists.txt  signal_tests.cpp
libs/testing/: CMakeLists.txt
libs/testing/include/testing/: testing.hpp
libs/testing/src/: testing.cpp
libs/testing/tests/: testing_self_tests.cpp
libs/window/include/window/: window.hpp  window_event.hpp
libs/window/src/: win32_window.cpp  win32_window.hpp  window.cpp  xcb_window.cpp  xcb_window.hpp
libs/window/tests/: window_tests.cpp
src/: CMakeLists.txt  allocator.cpp  allocator.hpp  compute_pipeline.cpp  compute_pipeline.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  line.slang  main.cpp  native_window_handle.hpp  physics.slang  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader_loader.cpp  shader_loader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  vma.cpp  volk.cpp  vulkan_helpers.hpp
